# tts-apibridge

./: .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  models.py  pyproject.toml  requirements.txt  runpod_client.py  voice_map.json
.github/workflows/: docker-image.yml
