[project]
name = "tts-apibridge"
version = "0.1.0"
description = "OpenAI-compatible Text-to-Speech API bridge for RunPod"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "httpx==0.25.2",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "requests>=2.32.5",
    "runpod>=1.7.13",
]
